--- a/Vocabulary/LearningWords.xaml
+++ b/Vocabulary/LearningWords.xaml
@@ -1,48 +1,42 @@
-﻿<Window x:Name="LearningWordsWindow"  x:Class="Vocabulary.LearningWords"
+﻿<Window x:Class="Vocabulary.LearningWords"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Vocabulary"
         mc:Ignorable="d"
-        Title="Learning Words" Height="400" Width="500" Loaded="Window_Loaded" Closed="Window_Closed">
+        x:Name="LearningWordsWindow"  Title="Learning Words" Height="400" Width="500" Loaded="Window_Loaded" Closed="Window_Closed">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="0.5*"/>
+        </Grid.RowDefinitions>
+        
         <Grid.Background>
             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                <GradientStop Color="#90EE90" Offset="0"/>
-                <GradientStop Color="#FFFDD878" Offset="1"/>
+                <GradientStop Color="#99ffcc" Offset="0"/>
+                <GradientStop Color="#ffffcc" Offset="1"/>
             </LinearGradientBrush>
         </Grid.Background>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="5*"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-        <Grid Grid.Row="0" Margin="50,20,50,20" Grid.Column="1"  >
-            <Grid.Background>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="#FFEE9617" Offset="0"/>
-                    <GradientStop Color="#FFFDCC4A" Offset="1"/>
-                </LinearGradientBrush>
-            </Grid.Background>
 
-            <TextBlock x:Name="textBlockEnglish" TextWrapping="Wrap" Text="Get ready!" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,50,0,0" FontSize="34" FontFamily="Showcard Gothic">
-                <TextBlock.Foreground>
-                    <SolidColorBrush Color="#FFCB6C0E"/>
-                </TextBlock.Foreground>
-            </TextBlock>
-            <TextBlock x:Name="textBlockUkrainian" TextWrapping="Wrap" Text="5 new words are waiting for you" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,0,50" FontFamily="Perpetua Titling MT" FontSize="22"/>
-            <TextBlock x:Name="textBlockTranscription" TextWrapping="Wrap" Text="Press 'Next' and start learning!" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="0,0,0,50" FontFamily="Perpetua Titling MT" FontSize="18"/>
+        <Label Grid.Row="0" x:Name="labelEnglish" Content="Get ready!" FontSize="34" FontFamily="Engravers MT" Foreground="#FFCB6C0E" VerticalAlignment="Bottom" HorizontalAlignment="Center" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+        <Label Grid.Row="1" x:Name="labelUkrainian" Content="5 new words are waiting for you" FontSize="26" FontFamily="Engravers MT" Foreground="#FFCB9E0E" VerticalAlignment="Center" HorizontalAlignment="Center" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+        <Label Grid.Row="2" x:Name="labelTranscription" Content="Press 'Next' and start learning!" FontSize="24" FontFamily="Engravers MT" Foreground="#FF66D8AA" VerticalAlignment="Top" HorizontalAlignment="Center" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
 
-        </Grid>
-        <Grid Grid.Row="1">
+        <Grid Grid.Row="3">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="2*" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
-            <Button Grid.Column="0"  x:Name="Previous" Content="&#x2190;" Click="Previous_Click" Foreground="#FF3DA73D" FontSize="34" FontFamily="Segoe UI Symbol" Background="{x:Null}" BorderThickness="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center"  />
-            <Button Grid.Column="1"  x:Name="ChangeStatus" Content="Mark as learned" Click="ChangeStatus_Click" Foreground="#FF3DA73D" FontSize="24" FontFamily="Segoe UI Semibold" Background="{x:Null}" BorderThickness="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center"  />
-            <Button Grid.Column="2" x:Name="Next" Content="&#x2192;" Click="Next_Click" Foreground="#FF3DA73D" FontSize="34" FontFamily="Segoe UI Symbol" Background="{x:Null}" BorderThickness="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" />
+
+            <Button Grid.Column="0" x:Name="Previous" Content="&#x2190;" Click="Previous_Click" FontSize="40" FontFamily="Segoe UI Symbol" Background="{x:Null}" Foreground="#FF53D8A2" BorderThickness="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" />
+            <Button Grid.Column="1" x:Name="ChangeStatus" Content="Mark as learned" Click="ChangeStatus_Click" FontSize="24" FontFamily="Engravers MT" Background="{x:Null}" Foreground="#FF53D8A2" BorderThickness="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" />
+            <Button Grid.Column="2" x:Name="Next" Content="&#x2192;" Click="Next_Click" FontSize="40" FontFamily="Segoe UI Symbol" Background="{x:Null}" Foreground="#FF53D8A2" BorderThickness="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" />
+
         </Grid>
+                
     </Grid>
 </Window>
