--- a/Vocabulary/MainWindow.xaml
+++ b/Vocabulary/MainWindow.xaml
@@ -1,19 +1,12 @@
-﻿<Window x:Name ="MainWindowWindow" x:Class="Vocabulary.MainWindow"
+﻿<Window x:Class="Vocabulary.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Vocabulary"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525" Loaded="Window_Loaded">
+        x:Name ="MainWindowWindow" Title="My Vocabulary" Height="400" Width="500" Loaded="Window_Loaded">
     <Grid>
-        <Grid.Background>
-            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                <GradientStop Color="#FF94C6F7" Offset="0"/>
-                <GradientStop Color="#FFE5FDFC" Offset="1"/>
-            </LinearGradientBrush>
-        </Grid.Background>
-        
         <Grid.RowDefinitions>
             <RowDefinition Height="0.3*"/>
             <RowDefinition Height="3*"/>
@@ -23,37 +16,19 @@
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-
-        <Label Grid.Row="1" Grid.ColumnSpan="2" Content="My Vocabulary" HorizontalAlignment="Center" VerticalAlignment="Center"  FontSize="40" FontFamily="Engravers MT" Foreground="#FF1B25C0"/>
-        <Button Grid.Row="0" Grid.Column="1" x:Name="Auto" Content="Auto" Click="Auto_Click" HorizontalAlignment="Left"
-                VerticalAlignment="Bottom"  FontSize="22" FontFamily="Engravers MT" Background="{x:Null}" BorderThickness="0,0,0,0" Margin="214,0,0,0">
-            <Button.Foreground>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="Black" Offset="1"/>
-                    <GradientStop Color="#FFF3DD11" Offset="0.818"/>
-                </LinearGradientBrush>
-            </Button.Foreground>
-        </Button>
-
-        <Button Grid.Row="2" Grid.Column="0" x:Name="List" Content="List of My Words"  Click="List_Click" HorizontalAlignment="Center"
-                VerticalAlignment="Center"  FontSize="22" FontFamily="Engravers MT" Background="{x:Null}" BorderThickness="0,0,0,0">
-            <Button.Foreground>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="Black" Offset="1"/>
-                    <GradientStop Color="#FF116FF3" Offset="0.818"/>
-                </LinearGradientBrush>
-            </Button.Foreground>
-        </Button>
-
-        <Button Grid.Row="2" Grid.Column="1" x:Name="Exercise" Content="Exercise"  Click="Exercise_Click"  HorizontalAlignment="Center"
-                VerticalAlignment="Center"  FontSize="22" FontFamily="Engravers MT" Background="{x:Null}" BorderThickness="0,0,0,0">
-            <Button.Foreground>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="Black" Offset="1"/>
-                    <GradientStop Color="#FF116FF3" Offset="0.818"/>
-                </LinearGradientBrush>
-            </Button.Foreground>
-        </Button>
+        
+        <Grid.Background>
+            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                <GradientStop Color="#FF94C6F7" Offset="0"/>
+                <GradientStop Color="#FFE5FDFC" Offset="1"/>
+            </LinearGradientBrush>
+            
+        </Grid.Background>
+        <Label Grid.Row="1" Grid.ColumnSpan="2" Content="My Vocabulary" FontSize="40" FontFamily="Engravers MT" Foreground="#FF1B25C0" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        
+        <Button Grid.Row="0" Grid.Column="1" x:Name="Auto" Content="Auto" Click="Auto_Click" FontSize="22" FontFamily="Engravers MT" Background="{x:Null}" Foreground="#FF09278B" BorderThickness="0,0,0,0" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+        <Button Grid.Row="2" Grid.Column="0" x:Name="List" Content="List of My Words" Click="List_Click" FontSize="28" FontFamily="Engravers MT" Background="{x:Null}" Foreground="RoyalBlue" BorderThickness="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Button Grid.Row="2" Grid.Column="1" x:Name="Exercise" Content="Word exercises" Click="Exercise_Click" FontSize="28" FontFamily="Engravers MT" Background="{x:Null}" Foreground="RoyalBlue" BorderThickness="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center"/>
 
     </Grid>
 </Window>
