--- a/Vocabulary/RepeatWords.xaml
+++ b/Vocabulary/RepeatWords.xaml
@@ -7,44 +7,36 @@
         mc:Ignorable="d"
         x:Name="RepeatWordsWindow" Title="Repeating Words" Height="400" Width="500" Loaded="Window_Loaded" Closed="Window_Closed">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="0.5*"/>
+        </Grid.RowDefinitions>
+        
         <Grid.Background>
             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                <GradientStop Color="#FFB6C1" Offset="0"/>
-                <GradientStop Color="#FFFDD878" Offset="1"/>
+                <GradientStop Color="#ffcccc" Offset="0"/>
+                <GradientStop Color="#ffffcc" Offset="1"/>
             </LinearGradientBrush>
         </Grid.Background>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="5*"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-        <Grid Grid.Row="0" Margin="50,20,50,20" Grid.Column="1"  >
-            <Grid.Background>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="#FFEE9617" Offset="0"/>
-                    <GradientStop Color="#FFFDCC4A" Offset="1"/>
-                </LinearGradientBrush>
-            </Grid.Background>
+        
+        <Label Grid.Row="0" x:Name="labelEnglish" Content="Get ready!" FontSize="34" FontFamily="Engravers MT" Foreground="#FFCB6C0E" VerticalAlignment="Bottom" HorizontalAlignment="Center" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+        <Label Grid.Row="1" x:Name="labelUkrainian" Content="This is all words which you learned" FontSize="26" FontFamily="Engravers MT" Foreground="#FFCB9E0E" VerticalAlignment="Center" HorizontalAlignment="Center" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+        <Label Grid.Row="2" x:Name="labelTranscription" Content="Press 'Next' and start repeating!" FontSize="24" FontFamily="Engravers MT" Foreground="#FFF47689" VerticalAlignment="Top" HorizontalAlignment="Center" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/> 
 
-            <TextBlock x:Name="textBlockEnglish" TextWrapping="Wrap" Text="Get ready!" VerticalAlignment="Top" HorizontalAlignment="Center" Margin="0,50,0,0" FontSize="34" FontFamily="Showcard Gothic">
-                <TextBlock.Foreground>
-                    <SolidColorBrush Color="#FFCB6C0E"/>
-                </TextBlock.Foreground>
-            </TextBlock>
-            <TextBlock x:Name="textBlockUkrainian" TextWrapping="Wrap" Text="This is all words which you learned" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,0,50" FontFamily="Perpetua Titling MT" FontSize="22"/>
-            <TextBlock x:Name="textBlockTranscription" TextWrapping="Wrap" Text="Press 'Next' and start repeating!" VerticalAlignment="Bottom" HorizontalAlignment="Center" Margin="0,0,0,50" FontFamily="Perpetua Titling MT" FontSize="18"/>
-
-        </Grid>
-        <Grid Grid.Row="1">
+        <Grid Grid.Row="3">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="2*" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
 
-            <Button Grid.Column="0"  x:Name="Previous" Content="&#x2190;" Click="Previous_Click" Foreground="#FFF15E74" FontSize="34" FontFamily="Segoe UI Symbol" Background="{x:Null}" BorderThickness="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center"  />
-            <Button Grid.Column="1"  x:Name="ChangeStatus" Content="Mark as unknown" Click="ChangeStatus_Click" Foreground="#FFF15E74" FontSize="24" FontFamily="Segoe UI Semibold" Background="{x:Null}" BorderThickness="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center"  />
-            <Button Grid.Column="2" x:Name="Next" Content="&#x2192;" Click="Next_Click" Foreground="#FFF15E74" FontSize="34" FontFamily="Segoe UI Symbol" Background="{x:Null}" BorderThickness="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" />
+            <Button Grid.Column="0" x:Name="Previous" Content="&#x2190;" Click="Previous_Click" FontSize="40" FontFamily="Segoe UI Symbol" Background="{x:Null}" Foreground="#FFF15E74" BorderThickness="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" />
+            <Button Grid.Column="1" x:Name="ChangeStatus" Content="Mark as unknown" Click="ChangeStatus_Click" FontSize="24" FontFamily="Engravers MT" Background="{x:Null}" Foreground="#FFF15E74" BorderThickness="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" />
+            <Button Grid.Column="2" x:Name="Next" Content="&#x2192;" Click="Next_Click" FontSize="40" FontFamily="Segoe UI Symbol" Background="{x:Null}" Foreground="#FFF15E74" BorderThickness="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" />
 
         </Grid>
+        
     </Grid>
 </Window>
