--- a/Vocabulary/Translation.xaml
+++ b/Vocabulary/Translation.xaml
@@ -39,15 +39,23 @@
 
             <Label Grid.Row="0" Grid.ColumnSpan="2" x:Name="Task" Content="Word" FontSize="30" FontFamily="Engravers MT" Foreground="#FFB932B9" HorizontalAlignment="Center" VerticalAlignment="Center" />
             <Label Grid.Row="0" Grid.ColumnSpan="2" x:Name="ResultSmile" Content="&#x1F60A;" FontSize="28" FontFamily="Engravers MT" FontWeight="Bold" Foreground="#FFDF1B87" HorizontalAlignment="Center" VerticalAlignment="Top" />
-            <Label Grid.Row="1" Grid.ColumnSpan="2" x:Name="ResultAnswer" Content="Result" FontSize="26" FontFamily="Engravers MT" Foreground="#FF73A4D1" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Top" />
-            <Label Grid.Row="1" Grid.ColumnSpan="2" x:Name="RightAnswer" Content="RightAnswer" FontSize="26" FontFamily="Engravers MT" Foreground="#FF73A4D1" HorizontalAlignment="Center" VerticalAlignment="Bottom" />
+            <TextBlock Grid.Row="1" Grid.ColumnSpan="2" x:Name="ResultAnswer" Text="Result" TextWrapping="Wrap" TextAlignment="Center" FontSize="26" FontFamily="Engravers MT" Foreground="#FF73A4D1" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Top" />
+            <TextBlock Grid.Row="2" Grid.ColumnSpan="2" x:Name="RightAnswer" Text="RightAnswer" TextWrapping="Wrap" TextAlignment="Center" FontSize="26" FontFamily="Engravers MT" Foreground="#FF73A4D1" HorizontalAlignment="Center" VerticalAlignment="Top" />
 
-            <Button Grid.Row="1" Grid.Column="0" x:Name="Var1" Content="Var1" Click="Var1_Click" FontSize="28" FontFamily="Engravers MT" Background="{x:Null}" Foreground="#FF128492" BorderThickness="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-            <Button Grid.Row="1" Grid.Column="1" x:Name="Var2" Content="Var2" Click="Var2_Click" FontSize="28" FontFamily="Engravers MT" Background="{x:Null}" Foreground="#FF128492" BorderThickness="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-            <Button Grid.Row="2" Grid.Column="1" x:Name="Var4" Content="Var4" Click="Var4_Click" FontSize="28" FontFamily="Engravers MT" Background="{x:Null}" Foreground="#FF128492" BorderThickness="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-            <Button Grid.Row="2" Grid.Column="0" x:Name="Var3" Content="Var3" Click="Var3_Click" FontSize="28" FontFamily="Engravers MT" Background="{x:Null}" Foreground="#FF128492" BorderThickness="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-
-            <Button Grid.Row="1" Grid.ColumnSpan="2" x:Name="CheckAnswer" Content="Check" Click="CheckAnswer_Click" FontSize="30" FontFamily="Engravers MT" Background="{x:Null}" Foreground="#FF128492" BorderThickness="0,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+            <Button Grid.Row="1" Grid.Column="0" Click="Var1_Click" Background="{x:Null}" BorderThickness="0" HorizontalAlignment="Center" VerticalAlignment="Center">
+                <TextBlock x:Name="Var1" Text="Var1" TextWrapping="Wrap" TextAlignment="Center" FontSize="22" FontFamily="Engravers MT" Foreground="#FF128492"/>
+            </Button>
+            <Button Grid.Row="1" Grid.Column="1" Click="Var2_Click" Background="{x:Null}" BorderThickness="0" HorizontalAlignment="Center" VerticalAlignment="Center">
+                <TextBlock x:Name="Var2" Text="Var2" TextWrapping="Wrap" TextAlignment="Center" FontSize="22" FontFamily="Engravers MT" Foreground="#FF128492"/>
+            </Button>
+            <Button Grid.Row="2" Grid.Column="0" Click="Var3_Click" Background="{x:Null}" BorderThickness="0" HorizontalAlignment="Center" VerticalAlignment="Center">
+                <TextBlock x:Name="Var3" Text="Var3" TextWrapping="Wrap" TextAlignment="Center" FontSize="22" FontFamily="Engravers MT" Foreground="#FF128492"/>
+            </Button>
+            <Button Grid.Row="2" Grid.Column="1" Click="Var4_Click" Background="{x:Null}" BorderThickness="0" HorizontalAlignment="Center" VerticalAlignment="Center">
+               <TextBlock x:Name="Var4" Text="Var4" TextWrapping="Wrap" TextAlignment="Center" FontSize="22" FontFamily="Engravers MT" Foreground="#FF128492"/>
+            </Button>
+         
+            <Button Grid.Row="1" Grid.ColumnSpan="2" x:Name="CheckAnswer" Content="Check" Click="CheckAnswer_Click" FontSize="30" FontFamily="Engravers MT" Background="{x:Null}" Foreground="#FF128492" BorderThickness="0" HorizontalAlignment="Center" VerticalAlignment="Center"/>
             <TextBox Grid.Row="2" Grid.ColumnSpan="2" x:Name="Answer"  Height="40" Margin="40,0,40,0" TextWrapping="Wrap" FontFamily="Engravers MT" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" />
         
         </Grid>
